# graph-crawl

./: .gitignore  docker-compose.yml  justfile  pyproject.toml
docs/: database.md  html-parsing.policy.md  normalization-policy.md
examples/: crawl_demo.py
migrations/: 0001_initial.py  env.py
migrations/versions/: 0001_initial.py
src/graph_crawl/: __init__.py  classify.py  config.py  crawler.py  fetcher.py  frontier.py  normalize.py  parser.py  scope.py  sink.py  urls.py
src/graph_crawl/_parsers/: selectolax_parser.py
src/graph_crawl/db/: base.py  engine.py  models.py  repository.py  sink.py
src/graph_crawl/schemas/: fetch.py  graph.py  parse.py
tests/: conftest.py  test_crawler.py  test_db_integration.py  test_fetch.py  test_normalize.py  test_parser.py  test_urls.py
