[project]
name = "graph-crawl"
version = "0.1.0"
description = "A research-oriented website mapping engine designed to discover, deduplicate, and architect a complete resource relationship graph while intelligently adapting crawl rates based on content stability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
