[project]
name = "graph-crawl"
version = "0.1.0"
description = "A research-oriented website mapping engine designed to discover, deduplicate, and architect a complete resource relationship graph while intelligently adapting crawl rates based on content stability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "idna>=3.18",
]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_crawl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
