[project]
name = "graph-crawl"
version = "0.1.0"
description = "A research-oriented website mapping engine designed to discover, deduplicate, and architect a complete resource relationship graph while intelligently adapting crawl rates based on content stability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "brotli>=1.2.0",
    "httpx>=0.28.1",
    "idna>=3.18",
    "pydantic>=2.13.4",
    "pytest-asyncio>=1.4.0",
    "selectolax>=0.4.10",
    "sqlalchemy>=2.0.51",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
    "ruff",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_crawl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
